# gDrive

./: .gitignore  LICENSE  README.md  cipherio.py  gCredentials.py  gData.py  gService.py  pyproject.toml  requirements.txt  utils.py
docs/: README.md
gDrive/: About.py  Changes.py  Channels.py  Comments.py  Drives.py  Files.py  Permissions.py  Replies.py  Revisions.py  __init__.py  query.py  utils.py
gDrive/data/: Changes.py  Comments.py  Drives.py  Files.py  Permissions.py  Replies.py  Revisions.py  __init__.py  base.py  helpers.py
gDriveData/: Changes.py  Comments.py  Drives.py  Files.py  Permissions.py  Replies.py  Revisions.py  base.py
gService/: __init__.py  cipherio.py  gCredentials.py  gData.py  gResource.py  gResourceManager.py  utils.py
